Kubernetes-Manifest/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod
  namespace: dev
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: "nginx:latest"
    ports:
    - containerPort: 80
