Kubernetes-Manifest/Service-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name:  internal-svc
  namespace: dev
spec:
  selector:
    app: dep
  type:  ClusterIP 
  ports:
  - name:  http
    port:  80
    targetPort:  80
