Kubernetes-Manifest/Service-LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nodeport-svc
  namespace: dev
spec:
  selector:
    app: dep
  type:  LoadBalancer 
  ports:
  - name:  http
    port:  80
    targetPort:  80
    nodePort: 30005
